# canister_benchmarks

./: 0_ic_deploy.sh  1_ic_update_call.sh  2_ic_query_call.sh  3_ic_update_parallel_call.sh  4_ic_query_parallel_call.sh  4_ic_update_parallel_call_cmd.sh  Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  ic_deploy.sh  ic_top_up.sh  local_deploy.sh  result_parallel_10_canisters.csv  result_parallel_10_canisters_query.csv  result_parallel_10_canisters_query_same_subnet.csv  result_parallel_10_canisters_same_subnet.csv  update_call_parallel.csv
results/different_subnet/: query_call.csv  query_call_parallel.csv  update_call.csv  update_call_parallel.csv
results/same_subnet/: query_call.csv  query_call_parallel.csv  update_call.csv  update_call_parallel.csv
src/canister_benchmarks_backend/: Cargo.toml
src/client/: Cargo.toml  client.did
src/cmd/: Cargo.toml
src/cmd/src/: main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/db/src/: lib.rs
src/proxy/: Cargo.toml  proxy.did
src/proxy/src/: lib.rs
src/server/: Cargo.toml  server.did
src/server/src/: lib.rs
