[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
common.workspace = true
tokio = { version = "1.43.0", features = ["full"] }
futures.workspace = true
csv = "1.3.1"
